[package]
name = "chat-linker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "^0.10", features = ["unstable_discord_api"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "^0.3.18"